--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,11 @@
   <title>CodingComponents</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
+  <link href="assets/nunitosans.css" rel="stylesheet">
+  <link href="assets/material-icons.css" rel="stylesheet">
 </head>
 <body>
-  <app-root></app-root>
+<app-root></app-root>
 </body>
 </html>
