--- a/projects/schemer/src/html_wrapper/index.html
+++ b/projects/schemer/src/html_wrapper/index.html
@@ -24,7 +24,7 @@
         "de": "Dieser Schemer erlaubt die Definition nach Typ iqb@1.2",
         "en": "This schemer is for editing coding schemes of type iqb@1.2"
       },
-      "version": "1.2.0-beta4",
+      "version": "1.2.0-rc",
       "apiVersion": "2.0.0",
       "repository": {
         "type": "git",
