--- a/projects/schemer/src/html_wrapper/index.html
+++ b/projects/schemer/src/html_wrapper/index.html
@@ -21,10 +21,10 @@
         "email": "iqb-tbadev@hu-berlin.de"
       },
       "description": {
-        "de": "Dieser Schemer erlaubt die Definition nach Typ iqb@1.2",
-        "en": "This schemer is for editing coding schemes of type iqb@1.2"
+        "de": "Dieser Schemer erlaubt die Definition eines Coding Scheme iqb-standard@1.0",
+        "en": "This schemer is for editing coding schemes of type iqb-standard@1.0"
       },
-      "version": "1.3.0",
+      "version": "1.4.0",
       "apiVersion": "2.0.0",
       "repository": {
         "type": "git",
