Add role to schemer verona

--- a/projects/schemer/src/html_wrapper/index.html
+++ b/projects/schemer/src/html_wrapper/index.html
@@ -21,11 +21,11 @@
         "email": "iqb-tbadev@hu-berlin.de"
       },
       "description": {
-        "de": "Dieser Schemer erlaubt die Definition eines Coding Scheme iqb-standard@1.0",
-        "en": "This schemer is for editing coding schemes of type iqb-standard@1.0"
+        "de": "Dieser Schemer erlaubt die Definition eines Coding Scheme iqb@3.0",
+        "en": "This schemer is for editing coding schemes of type iqb@3.0"
       },
-      "version": "1.5.0",
-      "apiVersion": "2.0.0",
+      "version": "1.6.0-beta",
+      "apiVersion": "3.0.0",
       "repository": {
         "type": "git",
         "url": "https://github.com/iqb-berlin/schemer-autocoder"
