Set schemer version 2.1.5

--- a/projects/schemer/src/html_wrapper/index.html
+++ b/projects/schemer/src/html_wrapper/index.html
@@ -21,10 +21,10 @@
         "email": "iqb-tbadev@hu-berlin.de"
       },
       "description": {
-        "de": "Dieser Schemer erlaubt die Definition eines Coding Scheme iqb@3.0",
-        "en": "This schemer is for editing coding schemes of type iqb@3.0"
+        "de": "Dieser Schemer erlaubt die Definition eines Coding Scheme iqb-standard@3.2",
+        "en": "This schemer is for editing coding schemes of type iqb-standard@3.2"
       },
-      "version": "2.1.4",
+      "version": "2.1.5",
       "apiVersion": "3.0.0",
       "repository": {
         "type": "git",
