Upgrade Schemer to v2.6.0, update API version, and refine build and compatibility scripts
- Bumped Schemer version to `2.6.0` and API version to `3.3.1` in metadata.
- Added polyfills and main scripts as ES modules in HTML wrapper.
- Enhanced `wrap_and_pack.js` to flatten folder structure and streamline asset handling.
- Adjusted script generation in `distpacker.js` for `module` support.
- Updated `package.json` dependencies with minor tweaks for better alignment.

--- a/projects/schemer/src/html_wrapper/index.html
+++ b/projects/schemer/src/html_wrapper/index.html
@@ -24,8 +24,8 @@
         "de": "Dieser Schemer erlaubt die Definition eines Coding Scheme iqb-standard@3.2",
         "en": "This schemer is for editing coding schemes of type iqb-standard@3.2"
       },
-      "version": "2.5.3",
-      "apiVersion": "3.2.0",
+      "version": "2.6.0",
+      "apiVersion": "3.3.1",
       "repository": {
         "type": "git",
         "url": "https://github.com/iqb-berlin/coding-components"
@@ -36,9 +36,10 @@
   <link href="schemer/assets/nunitosans.css" rel="stylesheet">
   <link href="schemer/assets/material-icons.css" rel="stylesheet">
   <link href="schemer.css" rel="stylesheet">
+  <script src="schemer/polyfills.js" type="module"></script>
+  <script src="schemer/main.js" type="module"></script>
 </head>
 <body class="mat-typography">
-<script type="text/javascript" src="schemer.js"></script>
 <app-root></app-root>
 </body>
 </html>
